--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "better-scroll": "^2.0.4",
+    "date-fns": "^2.16.1",
+    "mint-ui": "^2.2.13",
+    "mockjs": "^1.1.0",
+    "moment": "^2.29.1",
     "swiper": "^6.3.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.4.4"
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.4.4",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -22,6 +29,7 @@
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
@@ -43,6 +51,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "mockjs": "^1.1.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
